[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/User Interface/ChangeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/User Interface/RetryButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/User Interface/QuitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://src/User Interface/UserInterface.gd" type="Script" id=5]
[ext_resource path="res://src/User Interface/ChangeSceneButton.gd" type="Script" id=6]
[ext_resource path="res://src/User Interface/ResumeButton.gd" type="Script" id=7]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.033
margin_left = -264.0
margin_right = -103.0
margin_bottom = 20.2
text = "Score: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 680, 720 )
color = Color( 0, 0, 0, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.5
margin_top = -140.0
margin_right = 228.5
margin_bottom = -57.0
rect_scale = Vector2( 1.63027, 1.63027 )
rect_pivot_offset = Vector2( 228.82, 56.6951 )
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -60.0
margin_right = 168.0
margin_bottom = 260.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_right = 336.0
margin_bottom = 46.0
text = "Resume"
script = ExtResource( 7 )

[node name="ChangeSceneButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 1 )]
margin_top = 86.0
margin_right = 336.0
margin_bottom = 132.0
text = "Main Screen"
script = ExtResource( 6 )
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="RetryButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 2 )]
margin_top = 172.0
margin_right = 336.0
margin_bottom = 218.0

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 258.0
margin_right = 336.0
margin_bottom = 304.0
text = "Quit"
